--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -14,4 +14,8 @@
   <button type="button" (click)="share(product.name)">
     Share
   </button>
+
+  <app-product-alerts
+    [product]="product">
+  </app-product-alerts>
 </div>
