Pass data from child to a parent

--- a/src/app/product-alerts/product-alerts.component.html
+++ b/src/app/product-alerts/product-alerts.component.html
@@ -1,3 +1,4 @@
 <p *ngIf="product && product.price > 700">
-  <button type="button" (click)="notifyForSale(product.price)">Notify Me For Sale!</button>
+  <!-- <button type="button" (click)="notifyForSale(product.price)">Notify Me For Sale!</button> -->
+  <button type="button" (click)="notifyForSale.emit()">Notify Me For Sale!</button>
 </p>
