--- a/src/app/shipping/shipping.component.html
+++ b/src/app/shipping/shipping.component.html
@@ -4,3 +4,7 @@
   <span>{{ shipping.type }}</span>
   <span>{{ shipping.price }}</span>
 </div>
+
+<a routerLink="/cart" class="button">
+  Back
+</a>
