Use localStorage for saving cart

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -4,14 +4,27 @@
   <a routerLink="/shipping">Shipping Prices</a>
 </p>
 
+<p *ngIf="items.length === 0">Your shopping cart is empty!</p>
+
 <div *ngFor="let item of items" class="cart-item">
   <span>{{ item.name }}</span>
   <span>{{ item.price | currency }}</span>
 </div>
 
-<p *ngIf="items.length === 0">Your shopping cart is empty!</p>
+<button
+  *ngIf="items.length > 0"
+  type="button" 
+  class="button clear-button" 
+  (click)="onClearClick()"
+  >
+  Clear Cart
+</button>
 
-<form *ngIf="items.length > 0" [formGroup]="checkoutFrom" (ngSubmit)="onSubmit()">
+<form 
+  *ngIf="items.length > 0" 
+  [formGroup]="checkoutFrom" 
+  (ngSubmit)="onSubmit()"
+  >
   <div>
     <label for="name">
       Name
