--- a/src/styles.css
+++ b/src/styles.css
@@ -136,3 +136,9 @@ app-top-bar h1 {
   border-radius: 2px;
   background-color: #EEEEEE;
 }
+
+/* Clear Button */
+.clear-button {
+  background-color: #BDBDBD;
+  margin-bottom: 16px;
+}
